syntax = "proto3";
package storage;

message SnapshotMetadata {
    // The snapshot entry's term.
    uint64 term = 1;
    // The snapshot entry's index.
    uint64 index = 2;
    // The latest membership configuration covered by the snapshot.
    MembershipConfig membership = 3;
}

message MembershipConfig {
    // All members of the Raft cluster.
    repeated uint64 members = 1;
    // All members of the Raft cluster after joint consensus is finalized.
    //
    // The presence of a value here indicates that the config is in joint consensus.
    repeated uint64 members_after_consensus = 2;
}
